--- a/examples/site/widgets/geocode.html
+++ b/examples/site/widgets/geocode.html
@@ -436,31 +436,29 @@ widget_selected: selected
         </div>
       </div><!-- widget end -->
       <div data-ur-tabs-component="content" data-ur-tab-id="html">
-        <p class="code">
-          <span id="brown">&lt;div <span id="green">data-ur-set="reverse-geocode"<span id="brown">></br>
-            <span id="brown">&emsp;&emsp;&lt;form action="geocode_submit" method="get" accept-charset="utf-8" ></br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;input type="text" name="addr_1" value="" id="street_address" placeholder="street address" <span id="green">data-ur-reverse-geocode-component="rg-street"></br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;input type="text" name="city" value="" id="city" placeholder="city" <span id="green">data-ur-reverse-geocode-component="rg-city"<span id="brown">></br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;input type="text" name="zip" value="" id="zip" placeholder="zip" <span id="green">data-ur-reverse-geocode-component="rg-zip"<span id="brown">></br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;select name="state" id="state" <span id="green">data-ur-reverse-geocode-component="rg-state"<span id="brown">></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="">None&lt;/option></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="AL">Alabama&lt;/option></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="AK">Alaska&lt;/option></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="AZ">Arizona&lt;/option></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="AR">Arkansas&lt;/option></br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;etc.</br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;/select></br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;select name="country" id="country" <span id="green">data-ur-reverse-geocode-component="rg-country"<span id="brown">> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="" selected="selected">Select Country&lt;/option> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="United States">United States&lt;/option> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="United Kingdom">United Kingdom&lt;/option> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="Afghanistan">Afghanistan&lt;/option> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&lt;option value="Albania">Albania&lt;/option> </br>
-                <span id="brown">&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;etc.</br>
-              <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;/select></br>
-            <span id="brown">&emsp;&emsp;&lt;/form></br>
-          <span id="brown">&lt;/div>
-        </p>
+  {% highlight html %}
+  <div data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled" class="example_widget">
+    <div data-ur-set="reverse-geocode">
+      <form action="geocode_submit" method="get" accept-charset="utf-8" >
+        <input type="text" name="addr_1" value="" id="street_address" placeholder="street address" data-ur-reverse-geocode-component="rg-street">
+        <input type="text" name="city" value="" id="city" placeholder="city" data-ur-reverse-geocode-component="rg-city">
+        <input type="text" name="zip" value="" id="zip" placeholder="zip" data-ur-reverse-geocode-component="rg-zip">
+        <select name="state" id="state" data-ur-reverse-geocode-component="rg-state">
+          <option value="">None</option>
+          <option value="AL">Alabama</option>
+          <option value="AK">Alaska</option>
+          ...
+        </select>
+        <select name="country" id="country" data-ur-reverse-geocode-component="rg-country"> 
+          <option value="" selected="selected">Select Country</option> 
+          <option value="United States">United States</option> 
+          <option value="United Kingdom">United Kingdom</option> 
+          ...
+        </select>
+      </form>
+    </div>
+  </div>
+  {% endhighlight %}
       </div>
     </div>
   </div>
