--- a/examples/site/widgets/font_resizer.html
+++ b/examples/site/widgets/font_resizer.html
@@ -105,14 +105,14 @@ widget_selected: selected
           </div>
         </div>
         <div data-ur-tabs-component="content" data-ur-tab-id="html">
-          <p class="code">
-          <span id="brown">&lt;div <span id="green">data-ur-set="font-resizer"<span id="brown">></br>
-            <span id="brown">&emsp;&emsp;&lt;span <span id="green">data-ur-font-resizer-component="increase"<span id="brown">>[+]&lt;/span></br>
-            <span id="brown">&emsp;&emsp;&lt;span <span id="green">data-ur-font-resizer-component="label"<span id="brown">>&lt;/span></br>
-            <span id="brown">&emsp;&emsp;&lt;span <span id="green">data-ur-font-resizer-component="decrease"<span id="brown">>[-]&lt;/span></br>
-            <span id="brown">&emsp;&emsp;&lt;p <span id="green">data-ur-font-resizer-component="content"<span id="brown">>To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.&lt;/p></br>
-          <span id="brown">&lt;/div>
-          <p>
+  {% highlight html %}
+  <div data-ur-set="font-resizer" class="example_widget">
+    <span data-ur-font-resizer-component="increase">[+]</span>
+    <span data-ur-font-resizer-component="label"></span>
+    <span data-ur-font-resizer-component="decrease">[-]</span>
+    <p data-ur-font-resizer-component="content">To be or not to be, that is the question. Whether 'tis nobler in the mind to endure the slings and arrows of outrageous fortune etc etc.</p>
+  </div>
+  {% endhighlight %}
         </div>
       </div>
     </div><!-- wrapper-->
