--- a/examples/site/widgets/select_buttons.html
+++ b/examples/site/widgets/select_buttons.html
@@ -103,20 +103,20 @@ widget_selected: selected
             </div>
           </div>
           <div data-ur-tabs-component="content" data-ur-tab-id="html">
-            <p class="code">
-              <span id="brown">&lt;div <span id="green">data-ur-set='select-buttons'<span id="brown">><br/>
-                <span id="brown">&emsp;&emsp;&lt;select <span id="green">data-ur-select-buttons-component='select'<span id="brown">><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option selected='true' value='-1'> -None- &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-XS'> XS &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-S'> S &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-M'> M &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-L'> L &lt;/option><br/>
-               <span id="brown">&emsp;&emsp;&lt;/select><br/>
-    
-                <span id="brown">&emsp;&emsp;&lt;span <span id="green">data-ur-select-buttons-component='decrement' data-ur-state='disabled'<span id="brown">> [-] &lt;/span><br/>
-                <span id="brown">&emsp;&emsp;&lt;span <span id="green">data-ur-select-buttons-component='increment'<span id="brown">> [+] &lt;/span><br/>
-              <span id="brown">&lt;/div>
-            </p>  
+  {% highlight html %}
+  <div data-ur-set='select-buttons'>
+    <select data-ur-select-buttons-component='select'>
+      <option selected='true' value='-1'> -None- </option>
+      <option value='SKU-XS'> XS </option>
+      <option value='SKU-S'> S </option>
+      <option value='SKU-M'> M </option>
+      <option value='SKU-L'> L </option>
+    </select>
+
+    <span data-ur-select-buttons-component='decrement' data-ur-state='disabled'> [-] </span>
+    <span data-ur-select-buttons-component='increment'> [+] </span>
+  </div>
+  {% endhighlight %}
           </div>
         </div>
       </div>
