--- a/examples/site/widgets/select_list.html
+++ b/examples/site/widgets/select_list.html
@@ -102,26 +102,26 @@ widget_selected: selected
             </div>
           </div>
           <div data-ur-tabs-component="content" data-ur-tab-id="html">
-            <p class="code">
-              <span id="brown">&lt;div <span id="green">data-ur-set='select-list'<span id="brown">><br/>
-                <span id="brown">&emsp;&emsp;&lt;select <span id="green">data-ur-select-list-component='select'<span id="brown">><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option selected='true' value='-1'> -None- &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-XS'> XS &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-S'> S &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-M'> M &lt;/option><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;option value='SKU-L'> L &lt;/option><br/>
-                <span id="brown">&emsp;&emsp;&lt;/select><br/>
+  {% highlight html %}
+  <div data-ur-set='select-list'>
+    <select data-ur-select-list-component='select'>
+      <option selected='true' value='-1'> -None- </option>
+      <option value='SKU-XS'> XS </option>
+      <option value='SKU-S'> S </option>
+      <option value='SKU-M'> M </option>
+      <option value='SKU-L'> L </option>
+    </select>
 
 
-                <span id="brown">&emsp;&emsp;&lt;ul <span id="green">data-ur-select-list-component='content'<span id="brown">><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;li value='-1'> -None- &lt;/li><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-XS'> XS &lt;/li><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-S'> S &lt;/li><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-M'> M &lt;/li><br/>
-                  <span id="brown">&emsp;&emsp;&emsp;&emsp;&lt;li value='SKU-L'> L &lt;/li><br/>
-                <span id="brown">&emsp;&emsp;&lt;/ul><br/>
-              <span id="brown">&lt;/div>
-            </p>
+    <ul data-ur-select-list-component='content'>
+      <li value='-1'> -None- </li>
+      <li value='SKU-XS'> XS </li>
+      <li value='SKU-S'> S </li>
+      <li value='SKU-M'> M </li>
+      <li value='SKU-L'> L </li>
+    </ul>
+  </div>
+  {% endhighlight %}
           </div>
         </div>
       </div>
