--- a/examples/site/widgets/flex_table.html
+++ b/examples/site/widgets/flex_table.html
@@ -6,9 +6,9 @@ widget_selected: selected
 ---
 <div data-ur-set="tabs">
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
 
-   <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+   <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   
   <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
     <div class="wrapper">
@@ -197,7 +197,7 @@ widget_selected: selected
                       <td>597.73 x 100</td>
                       <td>597.91 x 300</td>
                       <td>731.10</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>AAPL <span class="co-name">Apple Inc.</span></th>
                       <td>378.94</td>
@@ -208,7 +208,7 @@ widget_selected: selected
                       <td>378.92 x 300</td>
                       <td>378.99 x 100</td>
                       <td>505.94</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>AMZN <span class="co-name">Amazon.com Inc.</span></th>
                       <td>191.55</td>
@@ -218,8 +218,8 @@ widget_selected: selected
                       <td>194.99</td>
                       <td>191.52 x 300</td>
                       <td>191.58 x 100</td>
-                      <td>240.32</td>  
-                    </tr>       
+                      <td>240.32</td>
+                    </tr>
                     <tr>
                       <th>ORCL <span class="co-name">Oracle Corporation</span></th>
                       <td>31.15</td>
@@ -230,7 +230,7 @@ widget_selected: selected
                       <td>31.14 x 6500</td>
                       <td>31.15 x 3200</td>
                       <td>36.11</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>MSFT <span class="co-name">Microsoft Corporation</span></th>
                       <td>25.50</td>
@@ -240,7 +240,7 @@ widget_selected: selected
                       <td>25.37</td>
                       <td>25.50 x 71100</td>
                       <td>25.51 x 17800</td>
-                      <td>31.50</td>  
+                      <td>31.50</td>
                     </tr>
                     <tr>
                       <th>CSCO <span class="co-name">Cisco Systems, Inc.</span></th>
@@ -252,7 +252,7 @@ widget_selected: selected
                       <td>18.65 x 10300</td>
                       <td>18.66 x 24000</td>
                       <td>21.12</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>YHOO <span class="co-name">Yahoo! Inc.</span></th>
                       <td>15.81</td>
@@ -262,7 +262,7 @@ widget_selected: selected
                       <td>15.94</td>
                       <td>15.79 x 6100</td>
                       <td>15.80 x 17000</td>
-                      <td>18.16</td>       
+                      <td>18.16</td>
                     </tr>
                   </tbody>
                 </table>
@@ -296,7 +296,7 @@ widget_selected: selected
                       <td>597.73 x 100</td>
                       <td>597.91 x 300</td>
                       <td>731.10</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>AAPL <span class="co-name">Apple Inc.</span></th>
                       <td>378.94</td>
@@ -307,7 +307,7 @@ widget_selected: selected
                       <td>378.92 x 300</td>
                       <td>378.99 x 100</td>
                       <td>505.94</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>AMZN <span class="co-name">Amazon.com Inc.</span></th>
                       <td>191.55</td>
@@ -317,8 +317,8 @@ widget_selected: selected
                       <td>194.99</td>
                       <td>191.52 x 300</td>
                       <td>191.58 x 100</td>
-                      <td>240.32</td>  
-                    </tr>       
+                      <td>240.32</td>
+                    </tr>
                     <tr>
                       <th>ORCL <span class="co-name">Oracle Corporation</span></th>
                       <td>31.15</td>
@@ -329,7 +329,7 @@ widget_selected: selected
                       <td>31.14 x 6500</td>
                       <td>31.15 x 3200</td>
                       <td>36.11</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>MSFT <span class="co-name">Microsoft Corporation</span></th>
                       <td>25.50</td>
@@ -339,7 +339,7 @@ widget_selected: selected
                       <td>25.37</td>
                       <td>25.50 x 71100</td>
                       <td>25.51 x 17800</td>
-                      <td>31.50</td>  
+                      <td>31.50</td>
                     </tr>
                     <tr>
                       <th>CSCO <span class="co-name">Cisco Systems, Inc.</span></th>
@@ -351,7 +351,7 @@ widget_selected: selected
                       <td>18.65 x 10300</td>
                       <td>18.66 x 24000</td>
                       <td>21.12</td>
-                    </tr>      
+                    </tr>
                     <tr>
                       <th>YHOO <span class="co-name">Yahoo! Inc.</span></th>
                       <td>15.81</td>
@@ -361,7 +361,7 @@ widget_selected: selected
                       <td>15.94</td>
                       <td>15.79 x 6100</td>
                       <td>15.80 x 17000</td>
-                      <td>18.16</td>       
+                      <td>18.16</td>
                     </tr>
                   </tbody>
                 </table>
@@ -398,7 +398,7 @@ widget_selected: selected
           <td>597.73 x 100</td>
           <td>597.91 x 300</td>
           <td>731.10</td>
-        </tr>      
+        </tr>
         ...
       </tbody>
     </table>
