--- a/examples/site/widgets/maps.html
+++ b/examples/site/widgets/maps.html
@@ -5,9 +5,9 @@ name: maps
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+  <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   <div>
     <div class="wrapper">
       <h1> {{page.title}} </h1>
@@ -108,7 +108,7 @@ widget_selected: selected
 
   *[data-ur-map-component='canvas'] {
     width: 300px;
-    height: 300px; 
+    height: 300px;
   }
   {% endhighlight %}
         </div>
@@ -123,7 +123,7 @@ widget_selected: selected
           <h3 data-ur-tabs-component="button" data-ur-tab-id="widget" data-ur-state="enabled">Widget</h3>
           <h3 data-ur-tabs-component="button" data-ur-tab-id="html">HTML</h3>
           <div data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state="enabled" class="example_widget">
-            <div data-ur-set='map'>       
+            <div data-ur-set='map'>
   
               <div data-ur-map-component='canvas' id="map_canvas"></div>
 
@@ -133,15 +133,15 @@ widget_selected: selected
               <div data-ur-map-component='description'>
                 <a href='http://slims-sf.com'> Slims </a>
                 <span> (415) 255-0333 </span>
-              </div>        
+              </div>
 
               <div data-ur-map-component='address'>
                 1805 Geary Blvd, San Francisco, California 94115
               </div>
               <div data-ur-map-component='description'>
                 <a href='http://thefillmore.com/index'> The Fillmore </a>
-                <span> 415.346.6000 </span>          
-              </div>                
+                <span> 415.346.6000 </span>
+              </div>
 
               <div data-ur-map-component='address'>
                 500 4th Street, San Francisco, CA
@@ -149,7 +149,7 @@ widget_selected: selected
               <div data-ur-map-component='description'>
                 <a href='http://hotelutah.com'> Hotel Utah </a>
                 <span> (415) 546-6300 </span>
-              </div>        
+              </div>
 
               <div data-ur-map-component='address'>
                 859 O'Farrell Street, San Francisco, CA
@@ -157,7 +157,7 @@ widget_selected: selected
               <div data-ur-map-component='description'>
                 <a href='http://gamh.com'> Great American Music Hall</a>
                 <span> (415) 885-0750 </span>
-              </div>        
+              </div>
 
               <div data-ur-map-component='address'>
                 1233 17th Street, San Francisco, CA
@@ -170,7 +170,7 @@ widget_selected: selected
           </div>
           <div data-ur-tabs-component="content" data-ur-tab-id="html">
   {% highlight html %}
-  <div data-ur-set='map'>       
+  <div data-ur-set='map'>
     <div data-ur-map-component='canvas' id="map_canvas"></div>
     <div data-ur-map-component='address'>
       333 11th Street, San Francisco, CA
@@ -178,21 +178,21 @@ widget_selected: selected
     <div data-ur-map-component='description'>
       <a href='http://slims-sf.com'> Slims </a>
       <span> (415) 255-0333 </span>
-    </div>        
+    </div>
     <div data-ur-map-component='address'>
       1805 Geary Blvd, San Francisco, California 94115
     </div>
     <div data-ur-map-component='description'>
       <a href='http://thefillmore.com/index'> The Fillmore </a>
-      <span> 415.346.6000 </span>          
-    </div>                
+      <span> 415.346.6000 </span>
+    </div>
     <div data-ur-map-component='address'>
       500 4th Street, San Francisco, CA
     </div>
     <div data-ur-map-component='description'>
       <a href='http://hotelutah.com'> Hotel Utah </a>
       <span> (415) 546-6300 </span>
-    </div>        
+    </div>
     <div data-ur-map-component='address'>
       859 O'Farrell Street, San Francisco, CA
     </div>
