--- a/examples/site/widgets/select_list.html
+++ b/examples/site/widgets/select_list.html
@@ -1,13 +1,13 @@
 ---
-layout: widgets 
+layout: widgets
 title: Select List
 name: select_list
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+  <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   
   <div>
     <div class="wrapper">
@@ -19,7 +19,7 @@ widget_selected: selected
     <div class='description'>
       <p>
       This widget allows you to bind a non-select list (for example a regular ol' <span class="inline_code">&lt;ul></span>)
-      to trigger changes on a <span class="inline_code">&lt;select&gt;</span> element. So clicking on an item in the 
+      to trigger changes on a <span class="inline_code">&lt;select&gt;</span> element. So clicking on an item in the
       list will automatically select an option in a drop-down menu.
       </p>
     </div>
