--- a/examples/site/widgets/font_resizer.html
+++ b/examples/site/widgets/font_resizer.html
@@ -1,14 +1,14 @@
 ---
-layout: widgets 
+layout: widgets
 title: Font Resizer
 name: font_resizer
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+  <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   
   <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
     <div class="wrapper">
@@ -85,7 +85,7 @@ widget_selected: selected
     <div class='wrapper'>
       <h2> Required Styles </h2>
       <p>
-        No styles are required. All styles are handled inline by the widget. 
+        No styles are required. All styles are handled inline by the widget.
       </p>
     </div>
 
