--- a/examples/site/widgets/input_clear.html
+++ b/examples/site/widgets/input_clear.html
@@ -6,9 +6,9 @@ widget_selected: selected
 ---
 <div data-ur-set="tabs">
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
 
-   <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+   <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   
   <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
     <div class="wrapper">
