--- a/examples/site/widgets/select_buttons.html
+++ b/examples/site/widgets/select_buttons.html
@@ -5,9 +5,9 @@ name: select_buttons
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+  <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   
   <div data-ur-tabs-component="content" data-ur-tab-id="basicpage" data-ur-state="enabled">
     <div class="wrapper">
@@ -19,9 +19,9 @@ widget_selected: selected
       <div class='description'>
         <p>
         This widget allows you to bind increment/decrement buttons to trigger
-        the appropriate changes on a <span class="inline_code">&lt;select&gt;</span> element. 
+        the appropriate changes on a <span class="inline_code">&lt;select&gt;</span> element.
         It's extremely useful in situations where the options for the select are long, and will not
-        fit on the select popup that most devices present. 
+        fit on the select popup that most devices present.
         </p>
       </div>
     </div> <!-- wrapper -->
