--- a/examples/site/widgets/tabs.html
+++ b/examples/site/widgets/tabs.html
@@ -1,13 +1,13 @@
 ---
-layout: widgets 
+layout: widgets
 title: Tabs
 name: tabs
 widget_selected: selected
 ---
 <div data-ur-set="tabs">
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
+  <div id="adv_btn" data-ur-tabs-component="button" data-ur-tab-id="advancedpage" data-ur-state="disabled">Advanced</div>
   
-  <div id="babutton" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
+  <div id="basic_btn" data-ur-tabs-component="button" data-ur-tab-id="basicpage" data-ur-state="enabled">Basic</div>
   <div class="wrapper">
       <h1> {{page.title}} </h1>
   </div>
@@ -79,7 +79,7 @@ widget_selected: selected
   /* Required SCSS Styling */
 
   *[data-ur-set="tabs"] {
-    *[data-ur-tabs-component='button'] { 
+    *[data-ur-tabs-component='button'] {
       opacity: 0.5;
     }
     *[data-ur-tabs-component='button'][data-ur-state='enabled'] {
@@ -90,12 +90,12 @@ widget_selected: selected
     }
     *[data-ur-tabs-component='content'][data-ur-state='enabled'] {
       display: block;
-    } 
+    }
   }
   
   /* Required CSS Styling */
   
-  *[data-ur-set="tabs"] *[data-ur-tabs-component='button'] { 
+  *[data-ur-set="tabs"] *[data-ur-tabs-component='button'] {
     opacity: 0.5;
   }
   *[data-ur-set="tabs"] *[data-ur-tabs-component='button'][data-ur-state='enabled'] {
@@ -123,23 +123,23 @@ widget_selected: selected
       <div id="tab_widget" class="example_widget"  data-ur-tabs-component="content" data-ur-tab-id="widget" data-ur-state='enabled'>
         <div data-ur-set='tabs'>
           <span data-ur-tabs-component='button' data-ur-tab-id='first' data-ur-state='enabled'>
-          First </span>        
+          First </span>
           <span data-ur-tabs-component='button' data-ur-tab-id='second'>
-          Second </span>        
+          Second </span>
           <span data-ur-tabs-component='button' data-ur-tab-id='third'>
-          Third </span>        
+          Third </span>
 
           <div data-ur-tabs-component='content' data-ur-tab-id='first' data-ur-state='enabled'>
-            <img width='300px' height='300px' src='{{site.url}}../images/sample1.png?some_attr=noway'/> 
+            <img width='300px' height='300px' src='{{site.url}}../images/sample1.png?some_attr=noway'/>
           </div>
 
           <div data-ur-tabs-component='content' data-ur-tab-id='second'>
-            <img width='300px' height='300px' src='{{site.url}}../images/sample2.png?some_attr=noway'/> 
+            <img width='300px' height='300px' src='{{site.url}}../images/sample2.png?some_attr=noway'/>
           </div>
 
           <div data-ur-tabs-component='content' data-ur-tab-id='third'>
-            <img width='300px' height='300px' src='{{site.url}}../images/sample3.png?some_attr=noway'/> 
-          </div>       
+            <img width='300px' height='300px' src='{{site.url}}../images/sample3.png?some_attr=noway'/>
+          </div>
         </div>
       </div>
       <div class="widget_html" data-ur-tabs-component="content" data-ur-tab-id="html">
@@ -150,16 +150,16 @@ widget_selected: selected
       <span data-ur-tabs-component='button' data-ur-tab-id='third'> Third </span>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='first' data-ur-state='enabled'>
-        <img width='300px' height='300px' src='{{site.url}}../images/sample1.png?some_attr=noway'/> 
+        <img width='300px' height='300px' src='{{site.url}}../images/sample1.png?some_attr=noway'/>
       </div>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='second'>
-        <img width='300px' height='300px' src='{{site.url}}../images/sample2.png?some_attr=noway'/> 
+        <img width='300px' height='300px' src='{{site.url}}../images/sample2.png?some_attr=noway'/>
       </div>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='third'>
-        <img width='300px' height='300px' src='{{site.url}}../images/sample3.png?some_attr=noway'/> 
-      </div>       
+        <img width='300px' height='300px' src='{{site.url}}../images/sample3.png?some_attr=noway'/>
+      </div>
     </div>
   {% endhighlight %}
       </div>
@@ -180,27 +180,27 @@ widget_selected: selected
     </div>
     <div data-ur-set='tabs'>
       <span data-ur-tabs-component='button'
-      data-ur-tab-id='first_sanity'> First </span>        
+      data-ur-tab-id='first_sanity'> First </span>
       <span data-ur-tabs-component='button'
-      data-ur-tab-id='second_sanity' data-ur-state='enabled'> Second </span>        
+      data-ur-tab-id='second_sanity' data-ur-state='enabled'> Second </span>
       <span data-ur-tabs-component='button'
-      data-ur-tab-id='third_sanity'> Third </span>        
+      data-ur-tab-id='third_sanity'> Third </span>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='first_sanity'>
-        <img width='70px' height='70px' src='{{site.url}}../images/sample1.png?some_attr=noway'/> 
+        <img width='70px' height='70px' src='{{site.url}}../images/sample1.png?some_attr=noway'/>
      </div>
 
       <div data-ur-tabs-component='content' data-ur-state='enabled'
        data-ur-tab-id='second_sanity'>
-        <img width='70px' height='70px' src='{{site.url}}../images/sample2.png?some_attr=noway'/> 
+        <img width='70px' height='70px' src='{{site.url}}../images/sample2.png?some_attr=noway'/>
       </div>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='third_sanity'>
-        <img width='70px' height='70px' src='{{site.url}}../images/sample3.png?some_attr=noway'/> 
-     </div>       
+        <img width='70px' height='70px' src='{{site.url}}../images/sample3.png?some_attr=noway'/>
+     </div>
 
     </div>
-  </div>    
+  </div>
 
   <div id="lightgrey"></div><!-- hr-->
 
@@ -228,11 +228,11 @@ widget_selected: selected
         You do nifty widget things.
       </div>
 
-      <div data-ur-tabs-component='button' data-ur-tab-id='third_accordions'> Third </div>        
+      <div data-ur-tabs-component='button' data-ur-tab-id='third_accordions'> Third </div>
 
       <div data-ur-tabs-component='content' data-ur-tab-id='third_accordions'>
         And you're performant.
-      </div>       
+      </div>
 
     </div>
   </div>
