fix carousel on front page

--- a/examples/site/index.html
+++ b/examples/site/index.html
@@ -114,7 +114,7 @@ home_selected: selected
             <div id="excarousel">
               <a href="{{site.url}}carousel.html"><div id="extitle">Carousel</div></a>
                 <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
-                  <div data-ur-carousel-component="view-container" >
+                  <div data-ur-carousel-component="view_container">
                     <div data-ur-carousel-component="scroll_container">
                       <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov1.JPG"/>
                       <img data-ur-carousel-component="item" src="{{site.url}}stylesheets/resources/moov2.JPG"/>
