Broken links and re-centralising the top menu bar

--- a/examples/site/index.html
+++ b/examples/site/index.html
@@ -75,7 +75,7 @@ home_selected: selected
           
     <!-- PLACE CODE FOR EXAMPLE BETWEEN HERE-->
             <div id="extoggler" data-ur-set="toggler">
-              <a href="{{site.url}}toggler.html"><div id="extitle">Toggler</div></a>
+              <a href="{{site.url}}/widgets/toggler.html"><div id="extitle">Toggler</div></a>
               <div id="exbutton" data-ur-toggler-component="button">Click on the button</div>
               <div id="extoggler_content" data-ur-toggler-component="content">And content appears</div>
             </div>
@@ -114,7 +114,7 @@ home_selected: selected
         <div class="example" id="carousel">
     <!-- PLACE CODE FOR EXAMPLE BETWEEN HERE-->
             <div id="excarousel">
-              <a href="{{site.url}}carousel.html"><div id="extitle">Carousel</div></a>
+              <a href="{{site.url}}/widgets/carousel.html"><div id="extitle">Carousel</div></a>
                 <div data-ur-set="carousel" data-ur-touch="disabled" data-ur-state="enabled">
                   <div data-ur-carousel-component="view_container" data-ur-clones="2">
                     <div data-ur-carousel-component="scroll_container">
@@ -173,7 +173,7 @@ home_selected: selected
       
 <!-- PLACE CODE FOR EXAMPLE BETWEEN HERE-->
         <div id="exselectlist" data-ur-set="select-list">
-          <a href="{{site.url}}select-list.html"><div id="extitle">Select List</div></a>
+          <a href="{{site.url}}/widgets/select-list.html"><div id="extitle">Select List</div></a>
           <select data-ur-select-list-component='select'>
             <option selected='true' value='SKU-A'> Click on </option>
             <option value='SKU-B'> a Value </option>
